<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">事务管理</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="todo">todo</string>
	<string name="doing">doing</string>
	<string name="done">done</string>
	<string name="terminate">terminate</string>
	<string name="create">create</string>
	<string name="edit_button">save</string>
	
	<string name="id">id</string>
	<string name="what">what</string>
	<string name="why">why</string>
	<string name="how">how</string>
	<string name="comment">comment</string>
	<string name="status">status</string>
	<string name="type">type</string>
	<string name="create_time">create_time</string>
	<string name="start_time">start_time</string>
	<string name="done_time">done_time</string>
	<string name="duration">duration</string> 
</resources>
