<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yang.affairs.MainActivity"
     android:background="@drawable/background"
     >
    <Button
        android:id="@+id/create"
        style="@style/BottomButton"
        android:text="@string/create"
        android:layout_alignParentTop="true"
        ></Button>
    <ListView 
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create"
        ></ListView>

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    >
    <Button 
        android:id="@+id/todo"
        style="@style/BottomButton"
        android:text="@string/todo"
        ></Button>
    <Button
        android:id="@+id/doing" 
        style="@style/BottomButton" 
        android:text="@string/doing"
        ></Button>
    <Button 
        android:id="@+id/done"
        style="@style/BottomButton"
        android:text="@string/done"
        ></Button>
    <Button
        android:id="@+id/terminate"
        style="@style/BottomButton"
        android:text="@string/terminate"
        ></Button>
    
</LinearLayout>
</RelativeLayout>
