<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
     >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            style="@style/edit_text"
            android:text="@string/id"
            />
        <EditText 
            android:id="@+id/id"
            style="@style/edit_edit"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            style="@style/edit_text"
            android:text="@string/what"
            />
        <EditText 
            android:id="@+id/what"
            style="@style/edit_edit"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            style="@style/edit_text"
            android:text="@string/why"
            />
        <EditText 
            android:id="@+id/why"
            style="@style/edit_edit"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            style="@style/edit_text"
            android:text="@string/how"
            />
        <EditText 
            android:id="@+id/how"
            style="@style/edit_edit"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            style="@style/edit_text"
            android:text="@string/comment"
            />
        <EditText 
            android:id="@+id/comment"
            style="@style/edit_edit"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            style="@style/edit_text"
            android:text="@string/type"
            />
<!--         <EditText  -->
<!--             android:id="@+id/type" -->
<!--             style="@style/edit_edit" -->
<!--             /> -->
        <Spinner
            android:id="@+id/spinner"
            style="@style/edit_edit"
            ></Spinner>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            style="@style/edit_text"
            android:text="@string/status"
            />
        <EditText 
            android:id="@+id/status"
            style="@style/edit_edit"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            style="@style/edit_text"
            android:text="@string/create_time"
            />
        <EditText 
            android:id="@+id/create_time"
            style="@style/edit_edit"
            android:editable="false"
            />
    </LinearLayout>
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            style="@style/edit_text"
            android:text="@string/start_time"
            />
        <EditText 
            android:id="@+id/start_time"
            style="@style/edit_edit"
            android:editable="false"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            style="@style/edit_text"
            android:text="@string/done_time"
            />
        <EditText 
            android:id="@+id/done_time"
            style="@style/edit_edit"
            android:editable="false"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            style="@style/edit_text"
            android:text="@string/duration"
            android:editable="false"
            />
        <EditText 
            android:id="@+id/duration"
            style="@style/edit_edit"
            />
    </LinearLayout>
    <Button 
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        />
</LinearLayout>
